# 3DDFA_V2_Dep

./: .gitignore  MANIFEST.in  PACKAGE_USAGE.md  demo_ed.py  pyproject.toml  setup.py
FaceBoxes/utils/nms/: cpu_nms.pyx
docs/: COMPREHENSIVE_GUIDE.md
threeddfa/: TDDFA.py  TDDFA_ONNX.py  demo.py  demo_video.py  demo_video_smooth.py  demo_webcam_smooth.py  gradiodemo.py  latency.py  streamlit_3d_viewer.py
threeddfa/FaceBoxes/: FaceBoxes.py  FaceBoxes_ONNX.py
threeddfa/FaceBoxes/utils/nms/: cpu_nms.c
threeddfa/bfm/: bfm.py  bfm_onnx.py
threeddfa/configs/: .gitignore  mb05_120x120.yml  mb1_120x120.yml  resnet_120x120.yml
threeddfa/utils/: depth.py  functions.py  io.py  onnx.py  pncc.py  pose.py  render.py  render_ctypes.py  tddfa_util.py  uv.py
threeddfa/utils/asset/: __init__.py
threeeddfa/: demo.py  demo_video.py  demo_video_smooth.py  demo_webcam_smooth.py  gradiodemo.py  latency.py
threeeddfa/FaceBoxes/: FaceBoxes.py  build_cpu_nms.sh
threeeddfa/Sim3DR/: .gitignore  build_sim3dr.sh
